# chessarena-ai

./: .gitignore  AI_PERFORMANCE_IMPROVEMENTS.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: .env.sample  .prettierignore  config.yaml  download.sh  motia-workbench.json  package.json  pyproject.toml  types.d.ts
api/services/ai/: claude.ts  gemini.ts  grok.ts  make-prompt.ts  models.ts  openai.ts  provider-options.ts  random-ai-selection.ts  types.d.ts
api/services/benchmark/: benchmark-config.ts  benchmark-prompt.ts  concurrency.ts  fetch-lichess-puzzles.ts  retry.ts  run-legal-move-benchmark.ts  run-puzzle-benchmark.ts  shared-utils.ts  stockfish-game.ts
api/services/chess/: analyze-player-strength.ts  create-game-id.ts  create-game.ts  create-passwords.ts  evaluate-best-moves.ts  evaluate-move.ts  generate-game-score.ts  generate-pgn.ts  get-capture-score.ts  get-game-role.ts  get-user-name.ts  move.ts  update-leaderboard.ts  utils.ts  validate-move-access.ts
api/steps/: test.ste.ts
api/steps/auth/: 00-auth-api.step.ts  01-get-user-api.step.ts
api/steps/benchmark/: 00-generate-position-set.step.ts  01-run-legal-move-benchmark.step.ts  02-get-benchmark-runs.step.ts  03-get-benchmark-run-detail.step.ts  04-get-benchmark-leaderboard.step.ts  05-fetch-puzzle-set.step.ts  06-run-puzzle-benchmark.step.ts  06b-run-all-puzzle-benchmarks.step.ts  07-get-puzzle-leaderboard.step.ts  08-get-puzzle-sets.step.ts  09-run-all-benchmarks.step.ts  10-run-stockfish-benchmark.step.ts  11-stockfish-leaderboard.step.ts
app/: .env.sample  (+3 more)
(+250 files in other folders)
