[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chessarena-api-python"
version = "0.1.0"
description = "Python steps for ChessArena Motia workflows"
requires-python = ">=3.10"
dependencies = [
  "motia[otel]==1.0.0-rc.22",
  "iii-sdk==0.2.0",
  "chess",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = false
